--- a/index.html
+++ b/index.html
@@ -18,17 +18,12 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Mahfuz Opu</span> World!</h1>
             <h3 class="p1">Build Climber and Train Stopper</h3>
-            <p class="p1">Assalamualaikum to everyone. I am a Muslim. The literal meaning of the word Islam is ‘peace’.
-                It
-                is a religion that was revealed to Prophet Muhammad (PBUH) over fourteen hundred years ago in Saudi
-                Arabia.
-                As per Muslim beliefs, Islam is the last religion that Allah Almighty has sent for the guidance of
-                mankind
-                and there wont be any other religion following it. Moreover, Islam is not just a religion that gives
-                only
-                the religious way of life, rather it is complete code of life and speaks about every matter of life,
-                whether
-                it is economics, politics, or social life and so on.</p>
+            <p class="p1">Assalamualaikum to everyone. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+                aliquid voluptas eaque qui aliquam beatae expedita assumenda, nulla sequi doloremque, sapiente ullam?
+                Est vel iure maiores illum mollitia. Sint amet consequuntur delectus dolores. Voluptatem maxime amet
+                perferendis sint pariatur recusandae.</p>
+            <br />
+            <br />
             <a class="link-button" class="p1" target="blank"
                 href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fmahfuz-parvez-opu-2052411b7%3Ffbclid%3DIwAR04KQfYR-6ZJWKNoJ5259Md_3w5yldTsp41l5kASuDrUjBSWGdL45FQaFU&h=AT3ReHP9PjLrOwljzdB7MQJAGtXAWsAgixzXdd2LjJPr2_GNNWHoQI13ihMmY5BccrnzfKQUj20yN_7t63FlTdwXSSbvJTK_lziax9XJugST54jQpSXABX6N870f2PZFgJ2IGQ">
                 <span class="p1">HIRE ME</span></a>
@@ -41,25 +36,27 @@
         <div>
             <img src="images/my-bg2.png" alt="" width="100%">
         </div>
-        <div class="p1" ; class="half-width" ;>
-            <h1>Dream Big</h1>
-            <h2>Become a we Developer</h2>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
-                how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" target="_blank" href="images/Capture 2.PNG">DOWNLOAD RESUME</a>
+        <div class="p1">
+            <div id="dream">
+                <h1>Dream Big</h1>
+                <h2>Become a we Developer</h2>
+                <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                    how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+                <br />
+                <a class="link-button" target="_blank" href="images/Capture 2.PNG">DOWNLOAD RESUME</a>
+            </div>
         </div>
     </section>
     <section class="p1" ; class="exprience-area">
-        <h1>Expriences</h1>
+        <h1 class="exprience-h1">Expriences</h1>
         <div class="flexible-container">
             <div id="ful-stack-experience" class="exprience-item">
                 <h2>Full Stack Developer</h2>
                 <h3 class="orange-color">2024-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework
-                    called
-                    Vue
-                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                    called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
             </div>
             <div id="web-dev-exprience" class="exprience-item">
                 <h2>Baby Web Developer</h2>
@@ -68,7 +65,6 @@
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
-        </div>
         </div>
     </section>
     <footer>
